fix: work page on mobile

--- a/src/app/work/work.module.scss
+++ b/src/app/work/work.module.scss
@@ -5,7 +5,6 @@
 
   @media (max-width: 1023px) {
     figure {
-      padding: 2.4rem;
       background-color: var(--background-surface-01);
       border: 1px solid var(--border-accent);
       border-radius: 1.5rem;
