--- a/src/components/collapse/collapse.module.css
+++ b/src/components/collapse/collapse.module.css
@@ -38,6 +38,7 @@
   align-items: center;
   justify-content: space-between;
   cursor: pointer;
+  gap: 1rem;
 }
 
 .summary::marker {
