--- a/src/components/container/container.module.css
+++ b/src/components/container/container.module.css
@@ -1,7 +1,7 @@
 .main {
   max-width: 90rem;
   margin: 3rem auto;
-  padding: 0 1.5rem;
+  padding: 0 1rem;
   background-color: var(--background-background);
 }
 
